(r4864) Fix a vanilla bug: In an ambush all mercs were moved to the centre of their sectors, even if they were in different sectors than the ambush.
(r4857) Fix a glitch in r4280: The wrong dying sound was played for animals and monsters.
(r4856) Minor improvement of the German translation.
(r4855) Fix a glitch in r3732, which caused that the last page of the history was missing, if there is a single entry on that page.
(r4849) Fix a vanilla out of bounds array access, when a soldier puts an item in his primary hand, which is not a weapon.  This caused burst mode to be reset, when reloading a gun.
(r4837) Fix a bug in r894, which caused the list of available skills in the IMP character generator to be filtered improperly.
(r4833) Fix a vanilla bug: The helicopter was missing a piece when landed in Estoni.
(r4832) Fix error in r1643, which lead to a null-pointer access in the personnel screen, when there are mercs with some stat values of 0.
(r4831) Fix a vanilla bug in the editor: The Z coordinate of the map was not set for surface maps.
(r4830) Fix a vanilla glitch: Some text in the editor taskbar sometimes got a shadow.
(r4829) Fix a vanilla bug, which made it possible to hire a merc, if there is a hated merc on the team, though he should refuse for other reasons.
(r4768) Enable scrolling the item pickup list with the mouse wheel.
(r4765) Fix a vanilla bug, when trying to remove more than $20.000 from the player's account by clicking on $100 or $10 while trading with a shopkeeper (broken display).
(r4722) Restore path cancellation when right clicking on the destination column in the map screen, which was broken in r3592.
(r4671) Fix a vanilla glitch: Some dying sounds were not played because of inconsistent file names.
(r4663) Fix a vanilla glitch: Do not add two corpses for mercs died in auto resolve.
(r4600, r4817) Plug vanilla memory leak when loading savegames.
(r4597) Plug vanilla memory leak in the laptop file viewer.